[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 24
debug = true
debug-assertions = true
lto = true
opt-level = 3
overflow-checks = true
panic = "unwind"

[dependencies]
cfg-if = "1.0.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-time = "0.12.0"
rp2040-boot2 = "0.2"
rp2040-hal = { version = "0.3", features = ["rt"] }
usb-device = "0.2.8"
usbd-serial = "0.1.1"
